"git@ssh.gitlab.freedesktop.org:drm/igt-gpu-tools.git" did not exist on "44ca8756777af957e0cff07bc5e488505bb7381d"
Blank screen on resume from suspend due to a page allocation failure
This happens often when resuming from suspend. When it happens, only a power cycle gets around the issue.
Proposed fix: https://lore.kernel.org/patchwork/patch/1175305/
OS: Fedora 31 Kernel: 5.3.16-300.fc31.x86_64 GPU: Radeon RX 580 8GB
Dec 03 09:29:06 Desktop-Fedora kernel: kworker/u8:10: page allocation failure: order:4, mode:0x40d00(GFP_NOIO|__GFP_COMP|__GFP_ZERO), nodemask=(null),cpuset=/,mems_allowed=0 Dec 03 09:29:06 Desktop-Fedora kernel: CPU: 0 PID: 299564 Comm: kworker/u8:10 Tainted: G W 5.3.12-300.fc31.x86_64 #1 Dec 03 09:29:06 Desktop-Fedora kernel: Hardware name: Gigabyte Technology Co., Ltd. H81M-D2V/H81M-D2V, BIOS F6 08/11/2015 Dec 03 09:29:06 Desktop-Fedora kernel: Workqueue: events_unbound async_run_entry_fn Dec 03 09:29:06 Desktop-Fedora kernel: Call Trace: Dec 03 09:29:06 Desktop-Fedora kernel: dump_stack+0x66/0x90 Dec 03 09:29:06 Desktop-Fedora kernel: warn_alloc.cold+0x7b/0xfb Dec 03 09:29:06 Desktop-Fedora kernel: ? _cond_resched+0x15/0x30 Dec 03 09:29:06 Desktop-Fedora kernel: ? __alloc_pages_direct_compact+0x168/0x170 Dec 03 09:29:06 Desktop-Fedora kernel: __alloc_pages_slowpath+0xdc4/0xe00 Dec 03 09:29:06 Desktop-Fedora kernel: __alloc_pages_nodemask+0x2ee/0x340 Dec 03 09:29:06 Desktop-Fedora kernel: kmalloc_order+0x14/0x30 Dec 03 09:29:06 Desktop-Fedora kernel: kmalloc_order_trace+0x1d/0xa0 Dec 03 09:29:06 Desktop-Fedora kernel: dc_set_power_state+0x24/0x100 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: dm_resume+0x78/0x2f0 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: amdgpu_device_ip_resume_phase2+0x58/0xb0 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: amdgpu_device_resume+0xb2/0x370 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: ? pci_pm_thaw+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: ? pci_pm_thaw+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: dpm_run_callback+0x4f/0x140 Dec 03 09:29:06 Desktop-Fedora kernel: device_resume+0xb0/0x200 Dec 03 09:29:06 Desktop-Fedora kernel: async_resume+0x19/0x30 Dec 03 09:29:06 Desktop-Fedora kernel: async_run_entry_fn+0x39/0x160 Dec 03 09:29:06 Desktop-Fedora kernel: process_one_work+0x19d/0x340 Dec 03 09:29:06 Desktop-Fedora kernel: worker_thread+0x50/0x3b0 Dec 03 09:29:06 Desktop-Fedora kernel: kthread+0xfb/0x130 Dec 03 09:29:06 Desktop-Fedora kernel: ? process_one_work+0x340/0x340 Dec 03 09:29:06 Desktop-Fedora kernel: ? kthread_park+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: ret_from_fork+0x35/0x40 Dec 03 09:29:06 Desktop-Fedora kernel: Mem-Info: Dec 03 09:29:06 Desktop-Fedora kernel: active_anon:819603 inactive_anon:355835 isolated_anon:0 active_file:815300 inactive_file:592348 isolated_file:0 unevictable:65 dirty:18 writeback:0 unstable:0 slab_reclaimable:148372 slab_unreclaimable:36386 mapped:162693 shmem:27336 pagetables:12112 bounce:0 free:68759 free_pcp:0 free_cma:0 Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 active_anon:3278412kB inactive_anon:1423340kB active_file:3261200kB inactive_file:2369392kB unevictable:260kB isolated(anon):0kB isolated(file):0kB mapped:650772kB dirty:72kB writeback:0kB shmem:109344kB shmem_thp: 0kB shmem_pmdmapped: 0kB anon_thp: 2238464kB writeback_tmp:0kB unstable:0kB all_unreclaimable? no Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 DMA free:15888kB min:88kB low:108kB high:128kB active_anon:0kB inactive_anon:0kB active_file:0kB inactive_file:0kB unevictable:0kB writepending:0kB present:15988kB managed:15896kB mlocked:0kB kernel_stack:0kB pagetables:0kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB Dec 03 09:29:06 Desktop-Fedora kernel: lowmem_reserve[]: 0 3112 11813 11813 11813 Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 DMA32 free:92420kB min:57792kB low:62236kB high:66680kB active_anon:1695536kB inactive_anon:449872kB active_file:395696kB inactive_file:321244kB unevictable:0kB writepending:0kB present:3290360kB managed:3224288kB mlocked:0kB kernel_stack:16kB pagetables:184kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB Dec 03 09:29:06 Desktop-Fedora kernel: lowmem_reserve[]: 0 0 8700 8700 8700 Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 Normal free:166728kB min:161540kB low:173964kB high:186388kB active_anon:1582876kB inactive_anon:973468kB active_file:2865504kB inactive_file:2048148kB unevictable:260kB writepending:72kB present:9164800kB managed:8917088kB mlocked:32kB kernel_stack:13296kB pagetables:48264kB bounce:0kB free_pcp:0kB local_pcp:0kB free_cma:0kB Dec 03 09:29:06 Desktop-Fedora kernel: lowmem_reserve[]: 0 0 0 0 0 Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 DMA: 2*4kB (U) 1*8kB (U) 2*16kB (U) 1*32kB (U) 3*64kB (U) 2*128kB (U) 0*256kB 0*512kB 1*1024kB (U) 1*2048kB (M) 3*4096kB (M) = 15888kB Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 DMA32: 5871*4kB (UME) 2472*8kB (UME) 1299*16kB (UME) 428*32kB (UME) 189*64kB (UME) 21*128kB (UM) 0*256kB 0*512kB 0*1024kB 0*2048kB 0*4096kB = 92524kB Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 Normal: 13776*4kB (UME) 9256*8kB (UME) 2212*16kB (UME) 12*32kB (UME) 0*64kB 0*128kB 0*256kB 0*512kB 0*1024kB 1*2048kB (H) 0*4096kB = 166976kB Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=1048576kB Dec 03 09:29:06 Desktop-Fedora kernel: Node 0 hugepages_total=0 hugepages_free=0 hugepages_surp=0 hugepages_size=2048kB Dec 03 09:29:06 Desktop-Fedora kernel: 1435277 total pagecache pages Dec 03 09:29:06 Desktop-Fedora kernel: 325 pages in swap cache Dec 03 09:29:06 Desktop-Fedora kernel: Swap cache stats: add 156662, delete 156321, find 3106/4953 Dec 03 09:29:06 Desktop-Fedora kernel: Free swap = 16761244kB Dec 03 09:29:06 Desktop-Fedora kernel: Total swap = 16777212kB Dec 03 09:29:06 Desktop-Fedora kernel: 3117787 pages RAM Dec 03 09:29:06 Desktop-Fedora kernel: 0 pages HighMem/MovableOnly Dec 03 09:29:06 Desktop-Fedora kernel: 78469 pages reserved Dec 03 09:29:06 Desktop-Fedora kernel: 0 pages cma reserved Dec 03 09:29:06 Desktop-Fedora kernel: 0 pages hwpoisoned Dec 03 09:29:06 Desktop-Fedora kernel: ------------[ cut here ]------------ Dec 03 09:29:06 Desktop-Fedora kernel: WARNING: CPU: 0 PID: 299564 at drivers/gpu/drm/amd/amdgpu/../display/dc/core/dc.c:2185 dc_set_power_state.cold+0x26/0x2f [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: Modules linked in: uinput rfcomm xt_CHECKSUM xt_MASQUERADE nf_nat_tftp nf_conntrack_tftp tun bridge stp llc nf_conntrack_netbios_ns nf_conntrack_broadcast xt_CT ip6t_REJECT nf_reject_ipv6 ip6t_rpfilter ipt_REJECT nf_reject_ipv4 xt_conntrack ebtable_nat ebtable_broute ip6table_nat ip6table_mangle ip6table_raw ip6table_security iptable_nat nf_nat iptable_mangle iptable_raw iptable_security nf_conntrack nf_defrag_ipv6 nf_defrag_ipv4 libcrc32c ip_set nfnetlink ebtable_filter ebtables ip6table_filter ip6_tables iptable_filter cmac bnep it87 hwmon_vid sunrpc vfat fat intel_rapl_msr intel_rapl_common x86_pkg_temp_thermal intel_powerclamp coretemp kvm_intel kvm iwlmvm irqbypass mac80211 crct10dif_pclmul iTCO_wdt iTCO_vendor_support crc32_pclmul mei_hdcp snd_hda_codec_realtek libarc4 snd_hda_codec_generic ledtrig_audio snd_hda_codec_hdmi snd_hda_intel btusb snd_hda_codec btrtl ghash_clmulni_intel btbcm intel_cstate snd_hda_core intel_uncore btintel snd_hwdep intel_rapl_perf bluetooth Dec 03 09:29:06 Desktop-Fedora kernel: iwlwifi snd_seq joydev snd_seq_device snd_pcm cfg80211 i2c_i801 ecdh_generic snd_timer ecc lpc_ich snd rfkill mei_me soundcore mei binfmt_misc ip_tables amdgpu i915 amd_iommu_v2 gpu_sched i2c_algo_bit ttm drm_kms_helper crc32c_intel drm serio_raw r8169 video fuse Dec 03 09:29:06 Desktop-Fedora kernel: CPU: 0 PID: 299564 Comm: kworker/u8:10 Tainted: G W 5.3.12-300.fc31.x86_64 #1 Dec 03 09:29:06 Desktop-Fedora kernel: Hardware name: Gigabyte Technology Co., Ltd. H81M-D2V/H81M-D2V, BIOS F6 08/11/2015 Dec 03 09:29:06 Desktop-Fedora kernel: Workqueue: events_unbound async_run_entry_fn Dec 03 09:29:06 Desktop-Fedora kernel: RIP: 0010:dc_set_power_state.cold+0x26/0x2f [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: Code: 20 fc fc ff 48 c7 c7 c0 1c 76 c0 e8 4b c6 aa f8 0f 0b 4c 8b ad f0 02 00 00 e9 69 03 fd ff 48 c7 c7 c0 1c 76 c0 e8 31 c6 aa f8 <0f> 0b 5b 5d 41 5c 41 5d c3 48 c7 c7 c0 1c 76 c0 e8 1c c6 aa f8 0f Dec 03 09:29:06 Desktop-Fedora kernel: RSP: 0018:ffffc1bbcb6b7d08 EFLAGS: 00010246 Dec 03 09:29:06 Desktop-Fedora kernel: RAX: 0000000000000024 RBX: 0000000000000001 RCX: 0000000000000006 Dec 03 09:29:06 Desktop-Fedora kernel: RDX: 0000000000000000 RSI: 0000000000000096 RDI: ffff9e3263017900 Dec 03 09:29:06 Desktop-Fedora kernel: RBP: ffff9e32558f0000 R08: 00009a185b2c3947 R09: ffffffffbabe9044 Dec 03 09:29:06 Desktop-Fedora kernel: R10: 00000000000006dd R11: 000000000001d2d0 R12: ffff9e3259081800 Dec 03 09:29:06 Desktop-Fedora kernel: R13: ffff9e3259081a78 R14: 0000000000000000 R15: 0000000000000010 Dec 03 09:29:06 Desktop-Fedora kernel: FS: 0000000000000000(0000) GS:ffff9e3263000000(0000) knlGS:0000000000000000 Dec 03 09:29:06 Desktop-Fedora kernel: CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033 Dec 03 09:29:06 Desktop-Fedora kernel: CR2: 00007ff987bdc540 CR3: 00000002b540a002 CR4: 00000000001626f0 Dec 03 09:29:06 Desktop-Fedora kernel: Call Trace: Dec 03 09:29:06 Desktop-Fedora kernel: dm_resume+0x78/0x2f0 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: amdgpu_device_ip_resume_phase2+0x58/0xb0 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: amdgpu_device_resume+0xb2/0x370 [amdgpu] Dec 03 09:29:06 Desktop-Fedora kernel: ? pci_pm_thaw+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: ? pci_pm_thaw+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: dpm_run_callback+0x4f/0x140 Dec 03 09:29:06 Desktop-Fedora kernel: device_resume+0xb0/0x200 Dec 03 09:29:06 Desktop-Fedora kernel: async_resume+0x19/0x30 Dec 03 09:29:06 Desktop-Fedora kernel: async_run_entry_fn+0x39/0x160 Dec 03 09:29:06 Desktop-Fedora kernel: process_one_work+0x19d/0x340 Dec 03 09:29:06 Desktop-Fedora kernel: worker_thread+0x50/0x3b0 Dec 03 09:29:06 Desktop-Fedora kernel: kthread+0xfb/0x130 Dec 03 09:29:06 Desktop-Fedora kernel: ? process_one_work+0x340/0x340 Dec 03 09:29:06 Desktop-Fedora kernel: ? kthread_park+0x80/0x80 Dec 03 09:29:06 Desktop-Fedora kernel: ret_from_fork+0x35/0x40 Dec 03 09:29:06 Desktop-Fedora kernel: ---[ end trace d772f98bbd40b4f1 ]--- Dec 03 09:29:06 Desktop-Fedora kernel: usb 3-7: reset full-speed USB device number 2 using xhci_hcd Dec 03 09:29:06 Desktop-Fedora kernel: [drm:retrieve_link_cap [amdgpu]] *ERROR* retrieve_link_cap: Read dpcd data failed.